Correções de bugs
Correção visual da versão mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="#About">Sobre</a>
                 </li>
                 <li>
-                    <a href="#Team">Time</a>
+                    <a href="#Team">Jogadores</a>
                 </li>
                 <li>
                     <a href="#Streams">Streams</a>
@@ -65,7 +65,7 @@
         </button>
         <button>
             <span>
-               <a href="#Team"> <i class="material-symbols-outlined"> people </i> </a> <span class="mobile-text"> Time </span>
+               <a href="#Team"> <i class="material-symbols-outlined"> people </i> </a> <span class="mobile-text"> Jogadores </span>
             </span>
         </button>
         <button>
@@ -129,7 +129,7 @@
         <!--Todo a Area do time em que tem uma cor de fundo.-->
             <div class="Container_Team">
                 <div class="Title_SubTitle_Team">
-                    <h1>Time</h1>
+                    <h1>Jogadores</h1>
                      <p>Nossa equipe de Valorant é formada por jogadores habilidosos e dedicados, que estão sempre em busca da vitória. Com Ryan "Ryzen" Silva, Max "Venom" Rodriguez, 
                      Alex "EagleEye" Kim, Diego "Pyro" Martinez e Daniel "Thunder" Lee, estamos prontos para enfrentar qualquer desafio. Cada jogador tem suas próprias especialidades 
                      e estilos de jogo, tornando nossa equipe uma ameaça multifacetada. Juntos, estamos determinados a alcançar o sucesso e a conquistar o topo dos rankings do Valorant.
@@ -210,7 +210,7 @@
                     </div>
                     <div class="Streamer_8"> 
                         <img src="src/Images/Streamer 3 Gabriel Guerreiro Almeida.png" alt="Foto do Streamer Gabriel 'Guerreiro' Almeida">
-                        <p>Gabriel "GUERREIRO" Almeida</p>
+                        <p>Gabriel "GUERREIRO" Souza</p>
                     </div>
              </div>
         </div>
